syntax = "proto3";

package main;

import "google/protobuf/timestamp.proto";

message CreateWorkRequestPb {
  string title = 1;
}

message UpdateWorkRequestPb {
  string title = 1;
}

message DeleteWorkRequestPb {
  // empty
}

// Start, Pause, Resume, Finish, CancelFinish
message ChangeWorkStateRequestPb {
  google.protobuf.Timestamp time = 1;
}
